assets/styles/app.css
/* ... */
@layer components {
    .CustomContainer {
        --custom-container-color: theme('colors.gray.900');
        --custom-container-bg-color: theme('colors.gray.100');

        padding: theme('spacing.3');
        border-radius: theme('borderRadius.md');
        color: var(--custom-container-color);
        background-color: var(--custom-container-bg-color);
    }
    
    .CustomContainer * {
        color: inherit;
    }

    .CustomContainer__Title {
        margin: theme('spacing.0') theme('spacing.0') theme('spacing.2') theme('spacing.0');
        text-transform: uppercase;
        font-weight: theme('fontWeight.bold');
        font-size: theme('fontSize.sm');
    }

    .CustomContainer--info {
        --custom-container-color: theme('colors.blue.900');
        --custom-container-bg-color: theme('colors.blue.100');
        
        @media (prefers-color-scheme: dark) {
            --custom-container-color: theme('colors.blue.100');
            --custom-container-bg-color: theme('colors.blue.900');
        }
    }

    .CustomContainer--tip {
        --custom-container-color: theme('colors.green.900');
        --custom-container-bg-color: theme('colors.green.100');
        
        @media (prefers-color-scheme: dark) {
            --custom-container-color: theme('colors.green.100');
            --custom-container-bg-color: theme('colors.green.900');
        }
    }

    .CustomContainer--warning {
        --custom-container-color: theme('colors.yellow.900');
        --custom-container-bg-color: theme('colors.yellow.100');
        
        @media (prefers-color-scheme: dark) {
            --custom-container-color: theme('colors.yellow.100');
            --custom-container-bg-color: theme('colors.yellow.900');
        }
    }

    .CustomContainer--danger {
        --custom-container-color: theme('colors.red.900');
        --custom-container-bg-color: theme('colors.red.100');
        
        @media (prefers-color-scheme: dark) {
            --custom-container-color: theme('colors.red.100');
            --custom-container-bg-color: theme('colors.red.900');
        }
    }
}

@layer components {
    .heading-permalink {
        transform: translate3d(-100%, -50%, 0);
        color: theme('colors.gray.500');
        text-decoration: none !important;
        margin-right: theme('spacing.1');

        &:before {
            content: '#';
        }
    }

    *:hover > .heading-permalink {
        opacity: 1;
    }

    @media screen(md) {
        .heading-permalink {
            position: absolute;
            opacity: 0;
            top: 50%;
            transition: opacity 0.2s;
            margin-right: 0;
        }
    }
}

@layer components {
    pre {
        max-height: 100dvh;
        overflow: auto;

        .hl-gutter {
            user-select: none;
            font-size: initial !important;

            &:not(.hl-gutter-addition, .hl-gutter-deletion) {
                margin-right: 1ch;
            }
        }

        .hl-addition, .hl-deletion {
            padding-left: 1ch;
        }
    }
}

@layer components {
    .Terminal {
        --terminal-bg-color: theme('colors.gray.50');
        --terminal-header-bg-color: theme('colors.gray.100');
        --terminal-border-radius: theme('borderRadius.lg');

        background-color: var(--terminal-bg-color);
        border-radius: var(--terminal-border-radius);

        @media (prefers-color-scheme: dark) {
            --terminal-bg-color: theme('colors.gray.900');
            --terminal-header-bg-color: theme('colors.gray.950');
        }
    }

    .Terminal__Header {
        background-color: var(--terminal-header-bg-color);
        border-radius: var(--terminal-border-radius) var(--terminal-border-radius) 0 0;
        font-family: theme('fontFamily.mono');
        font-size: theme('fontSize.sm');
        font-weight: bold;
        padding: theme('spacing.1') theme('spacing.2');
    }

    .Terminal__Body {
        padding: theme('spacing.2') 0;

        > pre {
            background-color: transparent;
        }
    }
}

